--- a/m1-lesson1/pom.xml
+++ b/m1-lesson1/pom.xml
@@ -13,7 +13,7 @@ Module  1 - Lesson 1</description>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.2.RELEASE</version>
+        <version>2.4.5</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
@@ -30,6 +30,10 @@ Module  1 - Lesson 1</description>
             <artifactId>spring-boot-starter-tomcat</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
         </dependency>
@@ -41,6 +45,11 @@ Module  1 - Lesson 1</description>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        
+        <dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>    
+		</dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -127,13 +136,13 @@ Module  1 - Lesson 1</description>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <dependencies>
+<!--                 <dependencies>
                     <dependency>
                         <groupId>org.springframework</groupId>
                         <artifactId>springloaded</artifactId>
                         <version>${spring-loaded.version}</version>
                     </dependency>
-                </dependencies>
+                </dependencies> -->
             </plugin>
 
             <plugin>
