--- a/m1-lesson2/pom.xml
+++ b/m1-lesson2/pom.xml
@@ -13,7 +13,7 @@ Module  1 - Lesson 2</description>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.2.RELEASE</version>
+        <version>2.4.5</version>
         <relativePath></relativePath> <!-- lookup parent from repository -->
     </parent>
 
@@ -46,6 +46,16 @@ Module  1 - Lesson 2</description>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
+
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>    
+		</dependency>
 
         <!-- security -->
 
@@ -140,13 +150,13 @@ Module  1 - Lesson 2</description>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <dependencies>
+<!--                 <dependencies>
                     <dependency>
                         <groupId>org.springframework</groupId>
                         <artifactId>springloaded</artifactId>
                         <version>${spring-loaded.version}</version>
                     </dependency>
-                </dependencies>
+                </dependencies> -->
             </plugin>
 
             <plugin>
