--- a/m1-lesson7/pom.xml
+++ b/m1-lesson7/pom.xml
@@ -13,7 +13,7 @@ Module  1 - Lesson 7</description>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.2.RELEASE</version>
+        <version>2.4.5</version>
         <relativePath></relativePath> <!-- lookup parent from repository -->
     </parent>
 
@@ -115,6 +115,15 @@ Module  1 - Lesson 7</description>
             <artifactId>log4j-over-slf4j</artifactId>
         </dependency>
 
+       <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+       <dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>    
+       </dependency>
         <!-- test scoped -->
 
         <dependency>
@@ -160,13 +169,6 @@ Module  1 - Lesson 7</description>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.springframework</groupId>
-                        <artifactId>springloaded</artifactId>
-                        <version>${spring-loaded.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
 
             <plugin>
